--- a/eurl-hatta-meubles/package.json
+++ b/eurl-hatta-meubles/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
