connect the back with the front end (handle  login error)

--- a/eurl-hatta-meubles/package.json
+++ b/eurl-hatta-meubles/package.json
@@ -13,16 +13,18 @@
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.5",
+    "framer-motion": "^11.3.6",
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.408.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-grid-gallery": "^1.0.1",
     "react-phone-number-input": "^3.4.3",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
